# apertium-ido-epo

./: .gitignore  .gitmodules  AUTHORS  BERLIN_ANALYSIS.md  BYZANTINE_EPO_IDO_ANALYSIS.md  CONTRIBUTING.md  COPULA_FIX_REPORT.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_TASKS_COMPLETED.md  CURRENT_STATUS.md  CURSOR_RULES_SUMMARY.md  ChangeLog  DICTIONARY_FIXES_SUMMARY.md  DICTIONARY_VALIDATION.md  EINSTEIN_TRANSLATION_ANALYSIS.md  EXECUTION_PLAN.md  FINAL_IMPROVEMENTS.md  FINAL_RESULTS_71_PERCENT_IMPROVEMENT.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS_AND_NEXT_STEPS.md  FINDINGS_SUMMARY.md  FIXES_SUMMARY.md  FIX_SUGGESTIONS_NEXT_STAGE.md  FUNCTION_WORDS_FIX_STATUS.md  IDOLINGUO_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUCCESS_SUMMARY.md  IMPROVEMENTS_NEEDED.md  IMPROVEMENT_RESULTS.md  INTERESTING_FIXES.txt  KAZAKSTAN_TRANSLATION_ANALYSIS.md  KRISTANISMO_ANALYSIS_SUMMARY.md  KRISTANISMO_TRANSLATION_ISSUES.md  MISSING_WORDS_ANALYSIS.md  MORPHOLOGY_EXPLANATION.md  Makefile  Makefile.am  Makefile.new  NEWS  NEW_TEST_RESULTS.md  (+118 more)
.cursor/.agent-tools/: candidates.txt  corpus_in.txt  corpus_out_io2eo.txt  ido_input.txt  out_new_new.txt  out_new_old.txt  out_old_new.txt  out_old_old.txt
.cursor/rules/: apertium-development.mdc  dictionary-quality.mdc  dictionary-sorting.mdc  documentation-map.mdc  git-workflow.mdc  project-context.mdc  project-progress.mdc
.github/workflows/: deploy-worker.yml
apertium/: AUTHORS
apertium/apertium-dev/: Makefile  NEWS
apertium/apertium-dev/outputs/: _freq_gt_80.tsv  ido_monodix_analysis_after_analyzer_tweak.json  ido_monodix_analysis_after_fix.json  (+1 more)
docs/: CONFLICTS_RESOLVED.md  FINAL_STRUCTURE.md  PRESERVED_RULES_PROTECTION.md  RESTRUCTURE_COMPLETE_FINAL.md  RESTRUCTURE_FINAL.md  ROOT_README.md  development_guide.md  index.md
docs/analyses/: NEXT_STEPS_RECOMMENDATIONS.md  development_guide.md
docs/restructure/: CI_CD_UPDATE_PLAN.md  EXECUTION_PLAN.md  MIGRATION_PLAN.md  PHASE1_PROGRESS.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_STATUS.md  REVIEW_CHECKLIST.md  STRUCTURE.md  SYMLINKS_AND_DUPLICATES.md
functions/api/: [[path]].js
ido-epo-translator-web/: .gitignore  API_TEST_REPORT.md  ARCHITECTURE_EXPLAINED.md  BRANCH_CLEANUP_2025-10-16.md  CLOUDFLARE_API_TOKEN_SETUP.md  CONFIGURATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  EC2_SETUP_SCRIPT.md  EC2_UPDATE_GUIDE.md  GITHUB_SECRETS_SETUP.md  OPERATIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  STATUS.md  TRANSLATION_ANALYSIS.md  WEBHOOK_SETUP.md  _worker.js  deploy-ec2.sh  firebase.json  index.html  package-lock.json  package.json  setup-ec2.sh  update-ec2-webhook.sh  version.json  vite.config.ts  worker.js  wrangler.toml
ido-epo-translator-web/apy-server/: rebuild-self-updating.sh  rebuild.sh
ido-epo-translator-web/functions/: package-lock.json  package.json
ido-epo-translator-web/scripts/: deploy-firebase.sh  update-translations.sh  write-version.cjs
ido-epo-translator-web/src/: App.tsx
outputs/: _lemmas_ido_epo.txt  ido_monodix_analysis.json  ido_monodix_analysis.tsv  ido_monodix_analysis_after_analyzer_tweak.tsv  ido_monodix_analysis_after_edit.json  ido_monodix_analysis_after_fix.tsv  ido_monodix_analysis_after_np.json  ido_monodix_analysis_after_np_batch2.json  iowiki_word_frequency.tsv  missing_ido_to_epo_gt80.tsv
scripts/: analyze_ido_monodix.py  build_ido_wiki_lexicon.py  fix_ido_monodix_safe.py
test/: README_PR_REGRESSION_TESTS.md  epo-ido-accusative-chunker-expected.txt  epo-ido-accusative-generator-output.txt  epo-ido-accusative-morph2-output.txt  epo-ido-accusative-postgen-expected.txt  epo-ido-accusative-pretransfer-expected.txt  epo-ido-basic-chunker-expected.txt  epo-ido-basic-chunker-output.txt  epo-ido-basic-disam-expected.txt  epo-ido-basic-generator-expected.txt  epo-ido-basic-generator-output.txt  epo-ido-basic-morph2-expected.txt  epo-ido-basic-morph2-output.txt  epo-ido-basic-pretransfer-output.txt  epo-ido-grammar-chunker-expected.txt  epo-ido-grammar-chunker-output.txt  epo-ido-grammar-input.txt  epo-ido-grammar-morph2-expected.txt  epo-ido-grammar-morph2-output.txt  epo-ido-grammar-postgen-output.txt  epo-ido-grammar-pretransfer-expected.txt  epo-ido-wikipedia-chunker-output.txt  epo-ido-wikipedia-disam-expected.txt  epo-ido-wikipedia-generator-expected.txt  epo-ido-wikipedia-input.txt  epo-ido-wikipedia-morph-output.txt  epo-ido-wikipedia-morph2-expected.txt  epo-ido-wikipedia-morph2-output.txt  epo-ido-wikipedia-postgen-output.txt  ido-epo-accusative-chunker-expected.txt  ido-epo-accusative-chunker-output.txt  ido-epo-accusative-generator-expected.txt  ido-epo-accusative-generator-output.txt  ido-epo-accusative-morph2-output.txt  ido-epo-accusative-pretransfer-output.txt  ido-epo-basic-chunker-expected.txt  ido-epo-basic-chunker-output.txt  ido-epo-basic-disam-expected.txt  ido-epo-basic-generator-expected.txt  ido-epo-basic-generator-output.txt  (+25 more)
tests/: diverse_patterns_test.txt  epo-ido-accusative-chunker-output.txt  epo-ido-accusative-morph-output.txt  epo-ido-accusative-morph2-expected.txt  epo-ido-grammar-postgen-expected.txt  epo-ido-grammar-pretransfer-output.txt  epo-ido-wikipedia-chunker-expected.txt  ido-epo-accusative-morph-expected.txt  ido-epo-accusative-morph2-expected.txt  ido-epo-accusative-postgen-expected.txt  ido-epo-accusative-postgen-output.txt  ido-epo-basic-morph2-expected.txt  ido-epo-grammar-postgen-output.txt  ido-epo-pr-regression-postgen-expected.txt  ido-epo-wikipedia-chunker-output.txt  ido-epo-wikipedia-generator-expected.txt  ido-epo-wikipedia-morph2-expected.txt  ido-epo-wikipedia-postgen-expected.txt  interesting_sentences.txt  language_culture_patterns.txt  regression_tests.sh  test_date_normalizer.py  tibet_sentences_ido_to_epo.txt
tools/python/: analyze_five_articles.py  analyze_ido_articles.py  date_normalizer.py  fetch_and_translate_wikipedia.py  sort_dictionary.py  translate_articles.py  translate_specific_articles.py
tools/shell/: test_ala_paradigm.sh  test_new_vocabulary.sh
tools/web/: README.md
(+46 files in other folders)
